--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leveldown": "~0.10.2",
     "levelup": "~0.18.2",
     "request": "~2.33.0",
-    "formidable": "~1.0.14"
+    "formidable": "~1.0.14",
+    "mkdirp": "~0.3.5"
   }
 }
