--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "levelup": "~0.18.2",
     "request": "~2.33.0",
     "formidable": "~1.0.14",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "concat-stream": "~1.4.1"
   }
 }
