--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request": "~2.33.0",
     "formidable": "~1.0.14",
     "mkdirp": "~0.3.5",
-    "concat-stream": "~1.4.1"
+    "concat-stream": "~1.4.1",
+    "password-hash": "~1.2.1"
   }
 }
