--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formidable": "~1.0.14",
     "mkdirp": "~0.3.5",
     "concat-stream": "~1.4.1",
-    "password-hash": "~1.2.1"
+    "password-hash": "~1.2.1",
+    "npmlog": "0.0.6"
   }
 }
