--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mkdirp": "~0.3.5",
     "concat-stream": "~1.4.1",
     "password-hash": "~1.2.1",
-    "npmlog": "0.0.6"
+    "npmlog": "0.0.6",
+    "fnpm-leveldb": "0.0.0"
   }
 }
