--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fnpm",
-  "version": "0.0.6",
+  "name": "unpm",
+  "version": "0.0.1",
   "description": "private npm registry in node",
   "main": "lib/index.js",
   "scripts": {
@@ -22,5 +22,23 @@
     "request": "~2.33.0",
     "semver": "~2.2.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mghayes/unpm.git"
+  },
+  "keywords": [
+    "npm",
+    "private",
+    "registry",
+    "fnpm",
+    "unpm",
+    "package",
+    "manager"
+  ],
+  "bugs": {
+    "url": "https://github.com/mghayes/unpm/issues"
+  },
+  "homepage": "https://github.com/mghayes/unpm"
 }
