--- a/lib/config.json
+++ b/lib/config.json
@@ -4,6 +4,7 @@
   "port": 8123,
   "pathname": "",
   "data_path": "./data",
+  "auto_clone_deps": true,
   "public_registry": "http://registry.npmjs.org",
   "crypto": {
     "algorithm": "sha512",
