--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unpm",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "private npm registry in node",
   "main": "lib/index.js",
   "scripts": {
@@ -13,11 +13,11 @@
   "author": "Michael Hayes",
   "dependencies": {
     "concat-stream": "~1.4.1",
-    "fnpm-leveldb": "0.0.6",
+    "unpm-leveldb": "0.1.0",
     "fnpm-fs-tarballs": "0.0.0",
     "leveldown": "~0.10.2",
     "levelup": "~0.18.2",
-    "mkdirp": "~0.3.5",
+    "mkdirp": "0.3.5",
     "npmlog": "0.0.6",
     "password-hash": "~1.2.1",
     "request": "~2.33.0",
