--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "password-hash": "~1.2.1",
     "request": "~2.33.0",
     "semver": "~2.2.1",
-    "nopt": "2.2.0"
+    "nopt": "2.2.0",
+    "unpm-router": "0.0.0"
   },
   "license": "MIT",
   "devDependencies": {
