--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "request": "~2.33.0",
     "semver": "~2.2.1",
     "nopt": "2.2.0",
-    "unpm-router": "0.0.1"
+    "unpm-router": "0.0.1",
+    "continuation-local-storage": "3.0.0"
   },
   "license": "MIT",
   "devDependencies": {
