--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "blanket": "1.1.6",
     "coveralls": "2.8.0",
     "glob": "3.2.9",
-    "mocha-lcov-reporter": "0.0.1"
+    "mocha-lcov-reporter": "0.0.1",
+    "levelup": "0.18.2",
+    "unpm-leveldb": "0.1.2"
   },
   "repository": {
     "type": "git",
