--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mghayes/unpm.git"
+    "url": "git://github.com/hayes/unpm.git"
   },
   "keywords": [
     "npm",
@@ -50,7 +50,7 @@
     "manager"
   ],
   "bugs": {
-    "url": "https://github.com/mghayes/unpm/issues"
+    "url": "https://github.com/hayes/unpm/issues"
   },
   "homepage": "https://github.com/mghayes/unpm"
 }
