--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
   "bugs": {
     "url": "https://github.com/hayes/unpm/issues"
   },
-  "homepage": "https://github.com/mghayes/unpm"
+  "homepage": "https://github.com/hayes/unpm"
 }
