--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "concat-stream": "1.4.1",
     "mkdirp": "0.3.5",
-    "npmlog": "0.0.6",
     "password-hash": "1.2.1",
     "request": "2.33.0",
     "semver": "2.2.1",
     "nopt": "2.2.0",
     "unpm-router": "0.0.1",
     "continuation-local-storage": "3.0.0",
-    "unpm-fs-backend": "0.0.0"
+    "unpm-fs-backend": "0.0.0",
+    "bunyan": "0.22.1"
   },
   "license": "MIT",
   "devDependencies": {
