--- a/lib/config.json
+++ b/lib/config.json
@@ -5,6 +5,7 @@
     "port": 8123,
     "pathname": ""
   },
+  "base_pathname": "",
   "data_path": "./data",
   "auto_clone_deps": true,
   "public_registry": "http://registry.npmjs.org",
