--- a/lib/config.json
+++ b/lib/config.json
@@ -5,7 +5,7 @@
     "port": 8123,
     "pathname": ""
   },
-  "base_pathname": "",
+  "basePathname": "",
   "crypto": {
     "algorithm": "sha512",
     "saltLength": 30,
