--- a/lib/config.json
+++ b/lib/config.json
@@ -16,5 +16,6 @@
   "auth" : {
     "authenticated_gets": false,
     "whitelist": ["/_session", "/-/user/org.couchdb.user:*"]
-  }
+  },
+  "fallback": false
 }
