--- a/lib/config.json
+++ b/lib/config.json
@@ -17,5 +17,5 @@
     "authenticated_gets": false,
     "whitelist": ["/_session", "/-/user/org.couchdb.user:*"]
   },
-  "fallback": false
+  "fallback": null
 }
