--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "unpm-router": "0.0.4",
     "continuation-local-storage": "3.0.0",
     "unpm-fs-backend": "0.0.7",
-    "unpm-auth": "0.2.2",
+    "unpm-auth": "0.2.3",
     "bunyan": "0.22.1",
-    "range_check": "0.0.4"
+    "range_check": "0.0.4",
+    "request": "^2.34.0"
   },
   "license": "MIT",
   "devDependencies": {
@@ -33,8 +34,7 @@
     "coveralls": "2.8.0",
     "mocha-lcov-reporter": "0.0.1",
     "unpm-mem-backend": "0.4.1",
-    "jsl": "0.1.1",
-    "request": "^2.34.0"
+    "jsl": "0.1.1"
   },
   "repository": {
     "type": "git",
