--- a/package.json
+++ b/package.json
@@ -14,16 +14,14 @@
   },
   "author": "Michael Hayes",
   "dependencies": {
-    "bunyan": "0.22.1",
-    "concat-stream": "1.4.1",
-    "continuation-local-storage": "3.0.0",
-    "mkdirp": "0.3.5",
-    "nopt": "2.2.0",
-    "password-hash": "1.2.1",
+    "bunyan": "^0.22.3",
+    "concat-stream": "^1.4.6",
+    "mkdirp": "^0.3.5",
+    "nopt": "^2.2.1",
     "range_check": "0.0.4",
     "request": "^2.34.0",
-    "semver": "2.2.1",
-    "unpm-auth": "^0.2.5",
+    "semver": "^2.3.2",
+    "unpm-auth": "^1.0.0",
     "unpm-fs-backend": "^0.1.0",
     "unpm-router": "0.0.4"
   },
