--- a/lib/config.json
+++ b/lib/config.json
@@ -14,8 +14,8 @@
   "verbose": true,
   "checkAuth": true,
   "auth" : {
-    "authenticated_gets": false,
-    "whitelist": ["/_session", "/-/user/org.couchdb.user:*", "/-/user/org.couchdb.user:*/*/*'"]
+    "authenticatedGets": false,
+    "whitelist": []
   },
   "fallback": null
 }
