allow empty whitelist

--- a/lib/config.json
+++ b/lib/config.json
@@ -14,8 +14,7 @@
   "verbose": true,
   "checkAuth": true,
   "auth" : {
-    "authenticatedGets": false,
-    "whitelist": []
+    "authenticatedGets": false
   },
   "fallback": null
 }
