--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@newrelic/unpm",
+  "name": "unpm",
   "version": "1.3.0",
   "description": "private npm registry in node",
   "main": "./index.js",
