add option to autodetect request host

--- a/lib/config.json
+++ b/lib/config.json
@@ -17,5 +17,6 @@
     "authenticatedGets": false
   },
   "fallback": null,
-  "alwaysIncludeFallback": false
+  "alwaysIncludeFallback": false,
+  "autoDetectHost": false
 }
